# FA-GDCNet

./: .gitignore  README.md  pyproject.toml  tasks.py
artifacts/: baseline_features.npz  clf.joblib  features.npz
datasets/: annotations_raw.jsonl  persian_multimodal_irony.jsonl
datasets/raw/: accounts.example.txt  accounts.txt  hashtags.jsonl  hashtags.txt  ignored_post_ids.txt  profiles.jsonl
datasets/raw/archive/: hashtags_unlabeled.jsonl  sarcasm_unlabeled.jsonl
docs/: architecture.md
openspec/specs/attention-explainability/: spec.md
openspec/specs/evaluation-benchmark/: spec.md
openspec/specs/multimodal-sentiment/: spec.md
openspec/specs/persian-multimodal-dataset/: spec.md
reports/: REPORT.md  ablation.csv  baseline.csv  iaa.md  metrics.csv  profile.json
scripts/: consolidate_images.py  debug_browser_post.py  debug_embed.py  debug_embed_cookies.py  diag_ig.py  fa_gdcnet_dashboard.py  proposal_demo.py  run_dashboard.py  test_embed.py  test_explore_urllib.py  test_web_scrape.py
sjjd6502/: id  sjjd6502_22863590073.json.xz
src/data/: __init__.py  bootstrap_labels.py  collect_browser.py  face_filter.py  iaa.py  import_pool.py  label.py  preprocess.py  prune_pool.py  sarcasm_candidates.py  schema.py  scrape.py  scrape_embed.py
src/eval/: __init__.py  ablation.py  baseline.py  metrics.py  profile.py  report.py
src/explain/: __init__.py  dashboard.py  render_image.py  render_text.py  rollout.py  rtl.py  ui.py
src/fa_gdcnet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/inference/: __init__.py  classifier.py  gdrm.py  models.py  pipeline.py  smolvlm_check.py  store.py
tests/: test_collect_browser.py  test_face_filter.py  test_gdrm.py  test_hashtag_specs.py  test_iaa.py  test_import_pool.py  test_pipeline.py  test_preprocess.py  test_preprocess_spam.py  test_prune_pool.py  test_rollout.py  test_rtl.py  test_rtl_render.py  test_sarcasm_candidates.py  test_schema.py  test_scrape_embed.py
(+7 files in other folders)
