[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fa-gdcnet"
version = "0.1.0"
description = "Lightweight Persian multimodal sentiment & sarcasm detector based on the FA-GDCNet design."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "FA-GDCNet thesis project" },
]
keywords = ["persian", "farsi", "nlp", "multimodal", "sarcasm", "clip", "parsbert", "smolvlm"]

# All transformer backbones stay frozen at inference time. The only fitted
# parameters are the scikit-learn classifier weights, so heavy ML deps are
# pinned to known-compatible versions but kept lean.
dependencies = [
    "torch>=2.2,<3.0",
    "transformers>=4.41,<5.0",
    "multilingual-clip>=1.0.10",
    "open_clip_torch>=2.24",
    "scikit-learn>=1.4,<2.0",
    "numpy>=1.26,<3.0",
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
    # PyPI 4.15.1 breaks profile/following GraphQL; use patched build until upstream ships fix.
    "instaloader @ git+https://github.com/npiriou/instaloader.git@fix/profile-metadata-query-flags",
    "browser-cookie3>=0.19",
    "lancedb>=0.6",
    "pyarrow>=15.0",
    "streamlit>=1.32",
    "matplotlib>=3.8",
    "psutil>=5.9",
    "hazm>=0.10",
    "joblib>=1.3",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
browser = [
    "playwright>=1.42",
]

[project.scripts]
fa-gdcnet = "fa_gdcnet_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["data*", "inference*", "explain*", "eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
